# dory

./: Cargo.toml  README.md  rustfmt.toml
aegis/: Cargo.toml
aegis/src/: main.rs  widget.rs
aegis/src/installer/: drivepages.rs  mod.rs
core/src/functions/: base.rs  desktops.rs  displaymanagers.rs  locale.rs
core/src/internal/: config.rs  hardware.rs  packages.rs
dory/: Cargo.toml
dory/src/: main.rs  widget.rs
dory/src/installer/: mod.rs  users.rs
shared/: Cargo.toml
shared/src/: args.rs  logging.rs  partition.rs
