[package]
name = "dory"
version = "1.0.0"
edition = "2024"

[dependencies]
clap.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
core = { path = "../core" }
shared = { path = "../shared" }
ansi-to-tui = "8"
anyhow = "1"
base64 = "0.22"
flate2 = { version = "1", features = ["rust_backend"] }
fuzzy-matcher = "0.3"
rand = "0.10"
ratatui = { version = "0.30", features = ["all-widgets"] }
strip-ansi-escapes = "0.2"
tempfile = "3"
throbber-widgets-tui = "0.11"

[[bin]]
name = "dory"
path = "src/main.rs"